--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <!-- =======================
-         건강 영역
-         ======================= -->
+    <!-- ===== 건강 영역 ===== -->
 
     <!-- 건강 첫 화면 -->
     <servlet>
@@ -88,7 +87,7 @@
         <url-pattern>/health_sports</url-pattern>
     </servlet-mapping>
 
-    <!-- 운동 상세 (어깨/가슴/등/하체/유산소/스포츠 공통) -->
+    <!-- 운동 상세 -->
     <servlet>
         <servlet-name>healthExerciseDetailPage</servlet-name>
         <jsp-file>/WEB-INF/views/health_exercise_detail.jsp</jsp-file>
@@ -98,7 +97,7 @@
         <url-pattern>/health_exercise_detail</url-pattern>
     </servlet-mapping>
 
-    <!-- 칼로리 계산기 1단계 -->
+    <!-- 칼로리 계산기 1/2/3 -->
     <servlet>
         <servlet-name>healthCalculatorPage</servlet-name>
         <jsp-file>/WEB-INF/views/health_calculator.jsp</jsp-file>
@@ -108,7 +107,6 @@
         <url-pattern>/health_calculator</url-pattern>
     </servlet-mapping>
 
-    <!-- 칼로리 계산기 2단계 -->
     <servlet>
         <servlet-name>healthCalculatorStep2</servlet-name>
         <jsp-file>/WEB-INF/views/health_calculator2.jsp</jsp-file>
@@ -118,7 +116,6 @@
         <url-pattern>/health_calculator2</url-pattern>
     </servlet-mapping>
 
-    <!-- 칼로리 계산기 3단계 -->
     <servlet>
         <servlet-name>healthCalculatorStep3</servlet-name>
         <jsp-file>/WEB-INF/views/health_calculator3.jsp</jsp-file>
@@ -128,9 +125,7 @@
         <url-pattern>/health_calculator3</url-pattern>
     </servlet-mapping>
 
-    <!-- =======================
-         소셜 영역
-         ======================= -->
+    <!-- ===== 소셜 영역 ===== -->
 
     <!-- 소셜 커뮤니티 목록 -->
     <servlet>
@@ -162,7 +157,7 @@
         <url-pattern>/social/write</url-pattern>
     </servlet-mapping>
 
-    <!-- 부대 별 평가 첫 화면 (/social_unit.jsp) -->
+    <!-- 부대 별 평가 첫 화면 -->
     <servlet>
         <servlet-name>socialUnitPage</servlet-name>
         <jsp-file>/WEB-INF/views/social_unit.jsp</jsp-file>
@@ -172,7 +167,7 @@
         <url-pattern>/social_unit</url-pattern>
     </servlet-mapping>
 
-    <!-- 부대 별 평가 리스트 (/social_unit_list.jsp) -->
+    <!-- 부대 별 평가 리스트 -->
     <servlet>
         <servlet-name>socialUnitListPage</servlet-name>
         <jsp-file>/WEB-INF/views/social_unit_list.jsp</jsp-file>
@@ -182,12 +177,10 @@
         <url-pattern>/social_unit_list</url-pattern>
     </servlet-mapping>
 
-    <!-- =======================
-         기본 설정
-         ======================= -->
-         http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+    <!-- ===== 지도 메인 (MainServlet @WebServlet("/main")) ===== -->
+    <!-- /main 은 MainServlet 이 처리하므로 web.xml 매핑 X -->
 
-    <display-name>webserver_front</display-name>
-
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
